--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<!-- <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <connectionStrings >
     <add
@@ -6,4 +6,4 @@
          connectionString="Server=localhost;Database=ToDos;User ID=sa; Password=C3b4ucme;Trusted_Connection=False;"/>
          <!-- providerName="System.Data.SqlClient"/> -->
     </connectionStrings>
-</configuration>
+</configuration> -->
